# swagger_output.json
@@ -812,6 +812,74 @@
             "description": "Internal Server Error"
           }
         }
+      },
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "x-organization-id",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "employeeName": {
+                  "example": "any"
+                },
+                "employeeEmail": {
+                  "example": "any"
+                },
+                "password": {
+                  "example": "any"
+                },
+                "role": {
+                  "example": "any"
+                },
+                "shiftId": {
+                  "example": "any"
+                },
+                "departmentId": {
+                  "example": "any"
+                },
+                "designationIds": {
+                  "example": "any"
+                },
+                "customRoleId": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
       }
     },
     "/api/organization/present-employees": {
@@ -2811,6 +2879,9 @@
               "type": "object",
               "properties": {
                 "designationId": {
+                  "example": "any"
+                },
+                "designationIds": {
                   "example": "any"
                 }
               }
